# mtl5-python

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  wheels.yml
applications/: heat_equation_1d.py  iterative_refinement.py  pandas_sensor_analysis.py  precision_showcase.py  quantized_inference.py  truss_analysis_2d.py
config/: TestMatrixDataDirConfig.hpp.in
docs/designs/: custom-dtype-feasibility.md  multi-precision-type-dispatch.md
mtl5/: __init__.py  pandas_ext.py
mtl5/sparse/: __init__.py
python/: CMakeLists.txt
python/src/: mtl5_module.cpp
tests/: conftest.py  test_import.py  test_iterative_solvers.py  test_linalg.py  test_matrix.py  test_pandas_ext.py  test_sparse.py  test_universal.py  test_universal_types.py  test_vector.py
