[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mtl5"
version = "0.1.0"
description = "Python bindings for MTL5 — NumPy/SciPy/JAX/PyTorch interop with hardware accelerator dispatch"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
scipy = ["scipy>=1.10"]
torch = ["torch>=2.0"]
jax = ["jax[cpu]>=0.4"]
pandas = ["pandas>=2.0"]
sklearn = ["scikit-learn>=1.3"]
all = ["scipy>=1.10", "torch>=2.0", "jax[cpu]>=0.4", "pandas>=2.0", "scikit-learn>=1.3"]
dev = ["pytest>=7.0", "numpy>=1.24", "scipy>=1.10"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DMTL5_ENABLE_PYTHON=ON"]

[tool.scikit-build.cmake.define]
MTL5_ENABLE_PYTHON = "ON"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
